# dsbc

./: .gitignore  LICENSE  README.md  pyproject.toml  test_example.py
.github/workflows/: release.yml
cli/: README.md  pyproject.toml  requirements.txt  setup.py
cli/deepseek_balance/: __init__.py  cli.py  client.py
cli/tests/: test_client.py
deepseek_balance/: __init__.py
scripts/: set-version.sh
tests/: test_client.py
